apps/linstor-gui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: linstor-gui
  namespace: piraeus-datastore
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`linstor.i.recompiled.org`)
      kind: Rule
      services:
        - name: linstor-controller
          port: 3370
      middlewares:
        - name: oauth2-proxy
          namespace: auth
  tls:
    secretName: linstor-tls
